# 4_joint_arm

./: CMakeLists.txt  README.md  handGestureDetect.py
main/: CMakeLists.txt  UARTConnect.c  UARTconnect.h  gpio_manager.c  gpio_manager.h  main.c  servo_controller.c  servo_controller.h
